downward_api.yaml
# downward_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-env
spec:
  containers:
  - name: downward-container
    image: ohjungmin/downward_api:latest
    ports:
    - containerPort: 5000
