nginx1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  namespace: monitoring1
spec:
  containers:
    - name: nginx
      image: nginx
      command: ["sleep", "3600"]
