nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  namespace: test
spec:
  containers:
    - name: nginx
      image: nginx
      command: ["sleep", "3600"]
