deny-test-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-test-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: edu4
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
        - podSelector:
            matchLabels:
              app: edu4
  policyTypes:
    - Ingress
